# Pinstagram

./: .gitignore  API.md  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  DATA_MODEL.md  DEV.md  PROJECT.md  README.md  SETUP.md  docker-compose.yml
admin/: package.json  tailwind.config.ts
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_place_is_featured.py
backend/app/: main.py
backend/app/api/v1/: auth.py  directions.py  feed.py  places.py  posts.py  reports.py  reviews.py  router.py  search.py  uploads.py  users.py
backend/app/api/v1/admin/: __init__.py  places.py  posts.py  reports.py  reviews.py  stats.py  transport.py  users.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  email_verification.py  place.py  post.py  refresh_token.py  report.py  review.py  social.py  transport.py  user.py
backend/app/schemas/: auth.py  directions.py  place.py  post.py  review.py  social.py  upload.py
backend/app/scripts/: create_admin.py  seed_dev.py
backend/app/services/: admin_service.py  auth_service.py  directions_service.py  feed_service.py  places_service.py  posts_service.py  reviews_service.py  search_service.py  social_service.py  uploads_service.py
backend/tests/: conftest.py  test_auth.py  test_places.py  test_reviews.py  test_social.py
features/: admin.md  auth.md  feed.md  place-details.md  posting.md  reviews.md  search-and-map.md  social.md
mobile/: .env.example  app.json  package.json  (+1 more)
(+42 files in other folders)
